--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
 
   <!--slick-->
-  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
   <!--font awesome-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"/>
@@ -32,6 +32,9 @@
         <p class="txt">LOADING</p>
       </div>
       <div class="header">
+        <div class="bell">
+          <i class="fa-solid fa-bell"></i>
+        </div>
         <div class="logo_box">
           P
         </div>
@@ -123,6 +126,61 @@
             </p>
           </div>
         </div>
+
+        <div class="s_food">
+          <div class="btn_close_food">
+            <div class="icon">
+              <i class="fa-solid fa-arrow-left"></i>
+              <span>BACK</span>
+            </div>
+          </div>
+          <div class="">
+            <p class=""></p>
+            <div class=""></div>
+          </div>
+        </div>
+
+        <div class="s_snack">
+          <div class="btn_close_snack">
+            <div class="icon">
+              <i class="fa-solid fa-arrow-left"></i>
+              <span>BACK</span>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="s_walk">
+          <div class="btn_close_walk">
+            <div class="icon">
+              <i class="fa-solid fa-arrow-left"></i>
+              <span>BACK</span>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="s_snack">
+          <div class="btn_close_snack">
+            <div class="icon">
+              <i class="fa-solid fa-arrow-left"></i>
+              <span>BACK</span>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="s_life">
+          <div class="btn_close_snack">
+            <div class="icon">
+              <i class="fa-solid fa-arrow-left"></i>
+              <span>BACK</span>
+            </div>
+          </div>
+
+        </div>
+        
+        <!--
         <div class="best_box">
           <p class="title">Best 사료</p>  
           <div class="best_food">
@@ -246,15 +304,11 @@
           </div>
         </div>  
       </div>
-      
+    -->
       <ul class="footer">
         <li class="lnb"><i class="fa-solid fa-bars"></i></li>
         <li class="cart"><i class="fa-solid fa-cart-shopping"></i></li>
-        <li class="home">
-          <a href="./index.html">
-            <i class="fa-solid fa-house"></i>
-          </a>
-        </li>
+
         <li class="chat"><i class="fa-solid fa-comment"></i></li>
         <li class="login"><i class="fa-solid fa-user"></i></li>
       </ul>
@@ -380,10 +434,8 @@
                 등록
               </div>
             </div>
- 
           </div>
         </div>
-
       </div>
 
       <div class="login_sheet">
